Bug 279173 - two lines status wrongly displayed
Summary: two lines status wrongly displayed
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-02 13:56 UTC by Alin M Elena
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the offending status (381.73 KB, image/png)
2011-08-02 13:57 UTC, Alin M Elena
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-08-02 13:56:30 UTC
Version:           git-latest (using Devel) 
OS:                Linux

if one user has a status that spans more than one line is wrongly displayed...



Reproducible: Didn't try

Steps to Reproduce:
...

Actual Results:  
...

Expected Results:  
...

OS: Linux (x86_64) release 3.0.0-2-desktop
Compiler: gcc
Comment 1 Alin M Elena 2011-08-02 13:57:50 UTC
Created attachment 62467 [details]
the offending status
Comment 2 David Edmundson 2011-10-26 00:58:28 UTC
This needs two fixes. One in the full view, one in the compact view.
Comment 3 Martin Klapetek 2011-10-26 08:02:58 UTC
What do you have in mind? Turning it into one line status or making the row bigger?
Comment 4 Martin Klapetek 2012-03-08 18:26:49 UTC
Git commit c87be89df62eff2326ad5b2297f4dbe99df89a4f by Martin Klapetek.
Committed on 08/03/2012 at 19:22.
Pushed by mklapetek into branch 'master'.

Remove all whitespace chars like \t and \n from the presence message

Reviewed-by: Aleix Pol

M  +1    -1    contact-delegate-compact.cpp
M  +1    -1    contact-delegate.cpp

http://commits.kde.org/telepathy-contact-list/c87be89df62eff2326ad5b2297f4dbe99df89a4f