Remove all whitespace chars like \t and \n from the presence message

Reviewed-by: Aleix Pol
BUG: 279173